clusters/local/foundryvtt/namespace-foundryvtt.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: foundryvtt
spec: {}
status: {}
