clusters/local/foundryvtt/foundryvtt-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: foundryvtt
  name: foundryvtt
  namespace: foundryvtt
spec:
  replicas: 1
  selector:
    matchLabels:
      app: foundryvtt
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: foundryvtt
    spec:
      volumes:
      - name: config
        projected:
          sources:
          - secret:
              name: foundryvtt-license
          - configMap:
              name: foundryvtt-config
      - name: foundry-data
        persistentVolumeClaim:
          claimName: foundryvtt-pvc
      containers:
      - image: milkshak3/foundryvtt:10.286
        name: foundryvtt
        resources: {}
        volumeMounts:
        - name: foundry-data
          mountPath: "/app/foundrydata"
status: {}
