clusters/local/foundryvtt/foundryvtt-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: foundryvtt
  name: foundryvtt
  namespace: foundryvtt
spec:
  ports:
  - name: 8000-8000
    nodePort: 8000
    port: 8000
    protocol: TCP
    targetPort: 8000
  selector:
    app: foundryvtt
  type: NodePort
status:
  loadBalancer: {}
