clusters/local/foundryvtt/foundryvtt-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: foundryvtt-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx-example
  rules:
  - http:
      paths:
      - path: /foundry
        pathType: Prefix
        backend:
          service:
            name: foundryvtt
            port:
              number: 8000
